Settings: support black theme for dark mode [2/4]
Change-Id: I12451c0b72f73b08b885e8103bbe3e74a0c4e19f

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -23,6 +23,10 @@
     <string name="backup_transport_setting_label">Change backup provider</string>
     <string name="backup_transport_title">Select backup provider</string>
 
+    <!-- Black theme for dark mode -->
+    <string name="berry_black_theme_title">Pure black</string>
+    <string name="berry_black_theme_summary">Pure black background for dark theme</string>
+
     <!-- Device Info screen. LineageOS legal. -->
     <string name="lineagelicense_title">LineageOS legal</string>
 
