--- a/res/values/lineage_config.xml
+++ b/res/values/lineage_config.xml
@@ -28,4 +28,7 @@
 
     <!-- Whether to show advanced display rotation settings -->
     <bool name="config_show_advanced_rotation_settings">true</bool>
+
+    <!-- Whether to show peak refresh rate in display settings -->
+    <bool name="config_show_peak_refresh_rate_switch">false</bool>
 </resources>
