Settings: support per-app volume [3/3]
Change-Id: I3e72a4b0fda68a5cd1e9a35fc161a1d7ddae6d7e

Change-Id: Id327b284b2fb8a82a195b515b08894a3ea7dae36
Signed-off-by: AnierinB <anierin@evolution-x.org>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -168,6 +168,13 @@
         android:ringtoneType="alarm"
         android:order="-60"/>
 
+    <com.crdroid.settings.preferences.SystemSettingSwitchPreference
+        android:key="show_app_volume"
+        android:title="@string/app_volume_title"
+        android:summary="@string/app_volume_summary"
+        android:defaultValue="false"
+        android:order="-5"/>
+
     <!-- Dial pad tones -->
     <SwitchPreferenceCompat
         android:key="dial_pad_tones"
