Settings: do not hardcode aapt package name in resources
CarDeveloperOptions includes Settings-core as static library:
https://android.googlesource.com/platform/packages/services/Car/+/refs/heads/android13-platform-release/packages/CarDeveloperOptions/Android.bp#31
Resources will build as com.android.car.developeroptions and not com.android.settings in this case

Change-Id: I67031b1456e83aff3c11c4857a72248fea11b027

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -153,7 +153,7 @@
         <lineageos.preference.LineagePartsPreference
             android:key="rotation"
             settings:replacesKey="auto_rotate"
-            settings:requiresConfig="@*com.android.settings:bool/config_show_advanced_rotation_settings"
+            settings:requiresConfig="@bool/config_show_advanced_rotation_settings"
             settings:requiresFeature="android.hardware.sensor.accelerometer" />
 
         <Preference
