Settings: Adapt per-app volume to LineageOS
Change-Id: I128646f5072cc2dcb19cf5311d1812b81f99adac

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -217,4 +217,9 @@
     <string name="battery_maximum_capacity">Maximum capacity</string>
     <string name="battery_maximum_capacity_summary">%1$d mAh (%2$d%%)</string>
     <string name="battery_maximum_capacity_not_available" translatable="false">@string/battery_cycle_count_not_available</string>
+    
+    <!-- Per-app volume -->
+    <string name="app_volume">App volume</string>
+    <string name="app_volume_title">Per-app volume control</string>
+    <string name="app_volume_summary">Show per-app volume button into volume dialog</string>
 </resources>
