--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -168,13 +168,6 @@
         android:ringtoneType="alarm"
         android:order="-60"/>
 
-    <com.crdroid.settings.preferences.SystemSettingSwitchPreference
-        android:key="show_app_volume"
-        android:title="@string/app_volume_title"
-        android:summary="@string/app_volume_summary"
-        android:defaultValue="false"
-        android:order="-5"/>
-
     <!-- Dial pad tones -->
     <SwitchPreferenceCompat
         android:key="dial_pad_tones"
@@ -236,6 +229,13 @@
         android:title="@string/emergency_tone_title"
         android:summary="%s"
         android:order="-10"/>
+        
+    <lineageos.preference.LineageSystemSettingSwitchPreference
+        android:key="show_app_volume"
+        android:title="@string/app_volume_title"
+        android:summary="@string/app_volume_summary"
+        android:defaultValue="false"
+        android:order="-5"/>
 
     <Preference
         android:key="sound_work_settings"
