Settings: Allow controlling device wake/sleep from lid events
Co-authored-by: LuK1337 <priv.luk@gmail.com>
Change-Id: If4d50a43d771955019ab9ccc6d72e4146e9ac9f2

--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -36,4 +36,17 @@
         <item>900000</item>
         <item>1800000</item>
     </string-array>
+
+    <!-- Lid event behavior -->
+    <string-array name="lid_behavior_entries" translatable="false">
+        <item>@string/lid_behavior_none</item>
+        <item>@string/lid_behavior_lock</item>
+        <item>@string/lid_behavior_sleep</item>
+    </string-array>
+    <!-- 0,2,1 to match WindowManagerPolicy.java -->
+    <string-array name="lid_behavior_values" translatable="false">
+        <item>0</item>
+        <item>2</item>
+        <item>1</item>
+    </string-array>
 </resources>
