--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -212,6 +212,16 @@
             android:defaultValue="@*lineageos.platform:bool/config_dt2sGestureEnabledByDefault"
             settings:requiresConfig="@*lineageos.platform:bool/config_dt2sGestureAvailable" />
 
+       <!-- Lid event behavior-->
+        <ListPreference
+            android:key="lid_behavior"
+            android:title="@string/lid_behavior_title"
+            android:summary="@string/lid_behavior_summary"
+            android:entries="@array/lid_behavior_entries"
+            android:entryValues="@array/lid_behavior_values"
+            android:dialogTitle="@string/lid_behavior_title"
+            settings:controller="com.android.settings.display.LidBehaviorPreferenceController" />
+
         <lineageos.preference.LineageGlobalSettingSwitchPreference
             android:key="wake_when_plugged_or_unplugged"
             android:title="@string/wake_when_plugged_or_unplugged_title"
