Settings: Allow controlling device wake/sleep from lid events
Co-authored-by: LuK1337 <priv.luk@gmail.com>
Change-Id: If4d50a43d771955019ab9ccc6d72e4146e9ac9f2

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -182,4 +182,11 @@
     <string name="assisted_gps">Use assisted GPS</string>
     <!-- Location settings screen, setting summary for Assisted GPS switch -->
     <string name="assisted_gps_summary">Download satellite assistance data from the internet which can greatly improve the GPS startup performance. For emergency calls, assisted GPS is always allowed.</string>
+
+    <!-- How device should react to lid events -->
+    <string name="lid_behavior_title">Smart cover</string>
+    <string name="lid_behavior_summary">Control device behavior when cover is opened/closed</string>
+    <string name="lid_behavior_none">None</string>
+    <string name="lid_behavior_lock">Lock/Unlock</string>
+    <string name="lid_behavior_sleep">Sleep/Wake</string>
 </resources>
