Make battery info configurable and enable it by default
Change-Id: If38db229e420e9f7c0ac26abb42a2a309b2f87c2

--- a/res/values/lineage_config.xml
+++ b/res/values/lineage_config.xml
@@ -29,6 +29,9 @@
     <!-- Whether to show advanced display rotation settings -->
     <bool name="config_show_advanced_rotation_settings">true</bool>
 
+    <!-- Show battery information -->
+    <bool name="config_show_battery_info" translatable="false">true</bool>
+
     <!-- Whether to show peak refresh rate in display settings -->
     <bool name="config_show_peak_refresh_rate_switch">false</bool>
 
