Settings: Add accessories part
Change-Id: Ia16cd020469373656acffca57ba4eb53d4b2cb71

--- a/res/xml/connected_devices.xml
+++ b/res/xml/connected_devices.xml
@@ -90,6 +90,11 @@
                 "com.android.settings.connecteddevice.fastpair.FastPairDeviceDashboardFragment"/>
     </PreferenceCategory>
 
+    <!-- Lineage Accessories -->
+    <lineageos.preference.LineagePartsPreference
+        android:key="accessories"
+        settings:requiresService="lineageaccessories" />
+
     <Preference
         android:key="connection_preferences"
         android:title="@string/connected_device_connections_title"
